--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <!--Header_section--> 
 
 <section id="AboutMe"><!--Aboutus-->
-<div class="inner_wrapper about-us aboutUs-container fadeInLeft animated wow">
+<div class="container portfolio_title">
   <div class="container">
     <h2></h2>
     <div class="inner_section">
@@ -66,8 +66,8 @@
 
       <div class="col-md-6"  style="margin-right: 100px; margin-top: 50px">
       	<img class="img-responsive" src="kim.jpg" align="center"> </div>
-      <div class="col-sm-pull-11" style="margin-right: 100px; margin-top: 50px;margin-bottom: 30px" >
-      <p align="justify" style="font-size:18px"> I am a fourth-year PhD student at the Operations Research Center at MIT, under the guidance of Professor Dimitris Bertsimas. My research centers around leveraging Optimization and Deep Learning tools to enhance standard Machine Learning algorithms. I am particularly passionate about Healthcare applications, and a large part of my research has been inspired by collaborarions with hospitals that aim to improve the quality of their services and operations.</p> 
+      <div class="col-sm-pull-11" style="margin-right: 100px; margin-top: 70px;margin-bottom: 30px" >
+      <p align="justify" style="font-size:18px;margin-top: 50px;margin-bottom: 20px"> I am a fourth-year PhD student at the Operations Research Center at MIT, under the guidance of Professor Dimitris Bertsimas. My research centers around leveraging Optimization and Deep Learning tools to enhance standard Machine Learning algorithms. I am particularly passionate about Healthcare applications, and a large part of my research has been inspired by collaborarions with hospitals that aim to improve the quality of their services and operations.</p> 
       <p align="center" style="color:#940a26;font-size:18px"> I will be on the job market this Fall 2023!
       </p> 
       </div>
