--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <div class="container">
     <h2></h2>
     <div class="inner_section">
-    	<h3 style="color:#940a26"> Kimberly Villalobos Carballo</h3> 
+    	<h3 style="color:#940a26;font-size:30px"> Kimberly Villalobos Carballo</h3> 
       	<h4 style="color:#940a26;margin-right: 100px"> <b>Contact:</b> kimvc [at] mit.edu</h4> 
  <div class="row" style="margin-bottom: 100px">
 
