Fix name margins

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
   <div class="container">
     <h2></h2>
     <div class="inner_section">
-    	<h3 style="color:#940a26;font-size:30px"> Kimberly Villalobos Carballo</h3> 
-      	<h4 style="color:#940a26"> <b>Contact:</b> kimvc [at] mit.edu</h4> 
+    	<h3 style="color:#940a26;font-size:30px;margin-left: 50px"> Kimberly Villalobos Carballo</h3> 
+      	<h4 style="color:#940a26;margin-left: 50px"> <b>Contact:</b> kimvc [at] mit.edu</h4> 
  <div class="row" style="margin-bottom: 100px">
 
       <div class="col-md-6"  style="margin: 50px">
