--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="inner_section">
     	<h3 style="color:#940a26;font-size:30px;margin-left: 40px"> Kimberly Villalobos Carballo</h3> 
       	<h4 style="color:#940a26;margin-left: 40px"> <b>Contact:</b> kimvc [at] mit.edu</h4> 
- <div class="row" style="margin-bottom: 100px">
+ <div class="row" style="margin-bottom: 50px">
 
       <div class="col-md-6"  style="margin: 40px">
       	<img class="img-responsive" src="kim.jpg" align="center"> </div>
@@ -82,8 +82,8 @@
 
 
 <!--Research-->
-<section id="Research">
-  <div class="container portfolio_title" style="margin-bottom: 100px">
+<section id="Research" >
+  <div class="container portfolio_title" style="margin-bottom: 50px;margin-top: 50px">
   	<h2>Research</h2>
 		<ul>
 
@@ -153,7 +153,7 @@
 <!-- Portfolio -->
 <section id="Teaching" class="content"> 
   <!-- Container -->
-  <div class="container portfolio_title" style="margin-bottom: 100px"> 
+  <div class="container portfolio_title" style="margin-bottom: 50px;margin-top: 50px"> 
     <h2>Teaching</h2>
     <!-- Title -->
 		<ul >
@@ -192,7 +192,7 @@
   
   <!-- Portfolio Filters -->
 <section id="Awards" class="content"> 
-  <div class="container portfolio_title" style="margin-bottom: 200px"> 
+  <div class="container portfolio_title" style="margin-bottom: 50px;margin-top: 50px"> 
       <h2>Awards</h2>
 		<ul class="about-us-list">
 			<li> Winner, MIT-Pillar AI Collective Prize 2023</li> 
