Fix reference link

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             </li>
 
              <li>
-                <a href="pdf">Do neural networks for segmentation understand insideness?</a>
+                <a href="https://arxiv.org/pdf/2201.10664.pdf">Do neural networks for segmentation understand insideness?</a>
                 <br>Kimberly Villalobos, Vilim Štih, Amineh Ahmadinejad, Shobhita Sundaram, Jamell Dozier, Andrew Francl, Frederico Azevedo, Tomotake Sasaki, Xavier Boix
                 <br>Neural Computation, 2021
             </li>
