Change content class

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <!--Header_section--> 
 
 <section id="AboutMe"><!--Aboutus-->
-<div class="container portfolio_title">
+<div class="inner_wrapper about-us aboutUs-container fadeInLeft animated wow">
   <div class="container">
     <h2></h2>
     <div class="inner_section">
