--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 <!--Research-->
 <section id="Research" >
   <div class="container portfolio_title" style="margin-bottom: 50px;margin-top: 50px">
-  	<h2>Research</h2>
+  	<h2 style="font-size:30px">Research</h2>
 		<ul>
 
 			<li>
@@ -154,7 +154,7 @@
 <section id="Teaching" class="content"> 
   <!-- Container -->
   <div class="container portfolio_title" style="margin-bottom: 50px;margin-top: 50px"> 
-    <h2>Teaching</h2>
+    <h2 style="font-size:30px">Teaching</h2>
     <!-- Title -->
 		<ul >
 			<li> Machine Learning via a Modern Optimization Lens (15.095) 
@@ -193,7 +193,7 @@
   <!-- Portfolio Filters -->
 <section id="Awards" class="content"> 
   <div class="container portfolio_title" style="margin-bottom: 50px;margin-top: 50px"> 
-      <h2>Awards</h2>
+      <h2 style="font-size:30px">Awards</h2>
 		<ul class="about-us-list">
 			<li> Winner, MIT-Pillar AI Collective Prize 2023</li> 
 
@@ -205,9 +205,11 @@
 
 			<li> Pi Beta Kappa Honor Society</li>
 
-			<li> Bronze Medal, 55th International Mathematics Olympiad (<a href="http://imo-official.org/">IMO</a>), 2014</li> 
+			<li> Bronze Medal, 55th International Mathematical Olympiad (<a href="http://imo-official.org/">IMO</a>), 2014</li> 
 
 			<li> Bronze medal, Asian Pacific Mathematics Olympiad (<a href="https://apmo-official.org/">APMO</a>), 2013</li> 
+
+			<li> Bronze medal, Iberoamerican Mathematical Olympiad (OIM), 2013</li> 
 		</ul><!-- /.about-us-list -->
 	 
     
