--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             </li>
 
              <li>
-                <a href="http://www. covidanalytics. io/datasetdocumentation">An aggregated dataset of clinical outcomes for covid-19 patients</a>
+                <a href="https://www.covidanalytics.io/dataset_documentation">An aggregated dataset of clinical outcomes for covid-19 patients</a>
                 <br>Luis R Soenksen, Yu Ma, Cynthia Zeng, Leonard Boussioux, Kimberly Villalobos Carballo, Liangyuan Na, Holly M Wiberg, Michael L Li, Ignacio Fuentes, Dimitris Bertsimas
                 <br>2022
             </li>
@@ -218,7 +218,7 @@
 
 			<li> Pi Beta Kappa Honor Society</li>
 
-			<li> Bronze Medal, 55th International Mathematical Olympiad (<a href="http://imo-official.org/">IMO</a>), 2014</li> 
+			<li> Bronze Medal, 55th International Mathematical Olympiad (<a href="https://www.imo-official.org/">IMO</a>), 2014</li> 
 
 			<li> Bronze medal, Asian Pacific Mathematics Olympiad (<a href="https://apmo-official.org/">APMO</a>), 2013</li> 
 
