--- a/index.html
+++ b/index.html
@@ -137,15 +137,15 @@
             </li>
 
              <li>
-                <a href="https://www.covidanalytics.io/dataset_documentation">An aggregated dataset of clinical outcomes for covid-19 patients</a>
-                <br>Luis R Soenksen, Yu Ma, Cynthia Zeng, Leonard Boussioux, Kimberly Villalobos Carballo, Liangyuan Na, Holly M Wiberg, Michael L Li, Ignacio Fuentes, Dimitris Bertsimas
-                <br>2022
-            </li>
-
-             <li>
                 <a href="https://link.springer.com/article/10.1007/s10729-020-09542-0">From predictions to prescriptions: A data-driven response to COVID-19</a>
                 <br>Dimitris Bertsimas, Leonard Boussioux, Ryan Cory-Wright, Arthur Delarue, Vassilis Digalakis, Alexandre Jacquillat, Driss Lahlou Kitane, Galit Lukin, Michael Li, Luca Mingardi, Omid Nohadani, Agni Orfanoudaki, Theodore Papalexopoulos, Ivan Paskov, Jean Pauphilet, Omar Skali Lami, Bartolomeo Stellato, Hamza Tazi Bouardi, Kimberly Villalobos Carballo, Holly Wiberg, Cynthia Zeng
                 <br>Health Care Management Science, 2021
+            </li>
+
+	    <li>
+                <a href="https://www.covidanalytics.io/dataset_documentation">An aggregated dataset of clinical outcomes for covid-19 patients</a>
+                <br>Dimitris Bertsimas, Leonard Boussioux, Ryan Cory-Wright, Arthur Delarue, Vassilis Digalakis, Alexandre Jacquillat, Driss Lahlou Kitane, Galit Lukin, Michael Li, Luca Mingardi, Omid Nohadani, Agni Orfanoudaki, Theodore Papalexopoulos, Ivan Paskov, Jean Pauphilet, Omar Skali Lami, Bartolomeo Stellato, Hamza Tazi Bouardi, Kimberly Villalobos Carballo, Holly Wiberg, Cynthia Zeng
+                <br>2022
             </li>
 
              <li>
