add verification tag

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+<meta name="google-site-verification" content="8dJcfI9ECeoEpNK_R9KdPfpiSnANlgPnUFS7JVZMt5c" />
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, maximum-scale=1">
 <title>Kimberly Villalobos Carballo</title>
@@ -92,7 +93,7 @@
   			<li>
             <a href="https://arxiv.org/abs/2206.10381">TabText: A Flexible and Contextual Approach to Tabular Data Representation</a>
             <br>Kimberly Villalobos Carballo, Liangyuan Na, Yu Ma, Léonard Boussioux, Cynthia Zeng, Luis R. Soenksen, Dimitris Bertsimas
-            <br>To be submitted
+            <br> Soon to be submitted to Nature Machine Intelligence
         </li>
 
         <li>
