--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
     <div class="container">
       <h2>Awards</h2>
   		<ul>
-        <li> Finalist, Doing Good with Good OR - Student Paper Competition 2023</li> 
+        <li> Finalist, INFORMS Doing Good with Good OR - Student Paper Competition 2023</li> 
 
   			<li> Winner, MIT-Pillar AI Collective Prize 2023</li> 
 
