--- a/index.html
+++ b/index.html
@@ -155,60 +155,24 @@
 <section id="Collaborations" >
   <div class="inner_wrapper Research Research-container">
     <div class="container">
-     <h2>Research</h2>
+     <h2>Collaborations</h2>
       <ul>
-        <li>
-            <a>  </a>
-            <br>Kimberly Villalobos Carballo, Liangyuan Na, Yu Ma, Léonard Boussioux, Cynthia Zeng, Luis R. Soenksen, Dimitris Bertsimas
+        <li> Hartford HealthCare 
+            <br> Improving Hospital Operations with Patient Outcome Predictions
+            <br> Optimizing Elective Surgery Assignments 
+            <br> Identifying life-threatening events for early dispatch of Rapid Response Teams.
         </li>
 
-        <li>
-            <a href="https://arxiv.org/abs/2305.15629">Patient Outcome Predictions Improve Operations at a Large Hospital Network</a>
-            <br>Liangyuan Na, Kimberly Villalobos Carballo, Jean Pauphilet, Ali Haddad-Sisakht, Daniel Kombert, Melissa Boisjoli-Langlois, Andrew Castiglione, Maram Khalifa, Pooja Hebbal, Barry Stein, Dimitris Bertsimas
-            <br>Submitted to Manufacturing & Service Operations Management (M&SOM), 2023
+        <li> UMass Memorial Medical Center
+            <br> Reducing Length of Stay via Patient Flow Predictions
         </li>
 
-        <li>
-            <a href="https://arxiv.org/abs/2110.15829">Holistic Deep Learning</a>
-            <br>Dimitris Bertsimas, Kimberly Villalobos Carballo, Léonard Boussioux, Michael Lingzhi Li, Alex Paskov, Ivan Paskov
-            <br>Submitted to Machine Learning (MACH), 2023
+        <li> Brigham And Women's Hospital 
+            <br> Early Detection of Domestic Violence Victims with multi-modal data
         </li>
 
-        <li>
-            <a href="https://arxiv.org/abs/2303.06515">Multistage Stochastic Optimization via Kernels</a>
-            <br>Dimitris Bertsimas, Kimberly Villalobos Carballo
-            <br>Submitted to Mathematical Programming (MAPR), 2023
-        </li>
 
-        <li>
-            <a href="https://arxiv.org/abs/2112.09279">Robust Upper Bounds for Adversarial Training</a>
-            <br>Dimitris Bertsimas, Xavier Boix, Kimberly Villalobos Carballo, Dick den Hertog
-            <br>Submitted to Journal of Machine Learning Research (JMLR), 2023
-        </li>
 
-        <li>
-            <a href="https://www.nature.com/articles/s41746-022-00689-4">Integrated multimodal artificial intelligence framework for healthcare applications</a>
-            <br>Luis R Soenksen, Yu Ma, Cynthia Zeng, Leonard Boussioux, Kimberly Villalobos Carballo, Liangyuan Na, Holly M Wiberg, Michael L Li, Ignacio Fuentes, Dimitris Bertsimas
-            <br>NPJ Digital Medicine (NPJDIGITALMED), 2022
-        </li>
-
-        <li>
-            <a href="https://link.springer.com/article/10.1007/s10729-020-09542-0">From predictions to prescriptions: A data-driven response to COVID-19</a>
-            <br>Dimitris Bertsimas, Leonard Boussioux, Ryan Cory-Wright, Arthur Delarue, Vassilis Digalakis, Alexandre Jacquillat, Driss Lahlou Kitane, Galit Lukin, Michael Li, Luca Mingardi, Omid Nohadani, Agni Orfanoudaki, Theodore Papalexopoulos, Ivan Paskov, Jean Pauphilet, Omar Skali Lami, Bartolomeo Stellato, Hamza Tazi Bouardi, Kimberly Villalobos Carballo, Holly Wiberg, Cynthia Zeng
-            <br>Health Care Management Science, 2021
-        </li>
-
-        <li>
-            <a href="https://www.covidanalytics.io/dataset_documentation">An aggregated dataset of clinical outcomes for covid-19 patients</a>
-            <br>Dimitris Bertsimas, Leonard Boussioux, Ryan Cory-Wright, Arthur Delarue, Vassilis Digalakis, Alexandre Jacquillat, Driss Lahlou Kitane, Galit Lukin, Michael Li, Luca Mingardi, Omid Nohadani, Agni Orfanoudaki, Theodore Papalexopoulos, Ivan Paskov, Jean Pauphilet, Omar Skali Lami, Bartolomeo Stellato, Hamza Tazi Bouardi, Kimberly Villalobos Carballo, Holly Wiberg, Cynthia Zeng
-            <br>2022
-        </li>
-
-        <li>
-            <a href="https://arxiv.org/pdf/2201.10664.pdf">Do neural networks for segmentation understand insideness?</a>
-            <br>Kimberly Villalobos, Vilim Štih, Amineh Ahmadinejad, Shobhita Sundaram, Jamell Dozier, Andrew Francl, Frederico Azevedo, Tomotake Sasaki, Xavier Boix
-            <br>Neural Computation, 2021
-        </li>
       </ul>
     </div>
   </div>
