--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <li> Hartford HealthCare 
             <br> Improving Hospital Operations with Patient Outcome Predictions
             <br> Optimizing Elective Surgery Assignments 
-            <br> Identifying life-threatening events for early dispatch of Rapid Response Teams.
+            <br> Identifying life-threatening events for early dispatch of Rapid Response Teams
         </li>
 
         <li> UMass Memorial Medical Center
@@ -168,7 +168,7 @@
         </li>
 
         <li> Brigham And Women's Hospital 
-            <br> Early Detection of Domestic Violence Victims with multi-modal data
+            <br> Detecting Victims of Domestic Violence with multi-modal data
         </li>
 
 
