--- a/index.html
+++ b/index.html
@@ -157,21 +157,21 @@
     <div class="container">
      <h2>Collaborations</h2>
       <ul>
-        <li> Hartford HealthCare 
-            <br> Improving Hospital Operations with Patient Outcome Predictions
-            <br> Optimizing Elective Surgery Assignments 
-            <br> Identifying life-threatening events for early dispatch of Rapid Response Teams
-        </li>
 
-        <li> UMass Memorial Medical Center
-            <br> Reducing Length of Stay via Patient Flow Predictions
-        </li>
+        <h4>Hartford HealthCare </h4>
+        <li> Improving Hospital Operations with Patient Outcome Predictions </li>
+        <li> Optimizing Elective Surgery Assignments </li>
+        <li> Identifying life-threatening events for early dispatch of Rapid Response Teams </li>
+      </ul>
 
-        <li> Brigham And Women's Hospital 
-            <br> Detecting Victims of Domestic Violence with multi-modal data
-        </li>
-
-
+      <ul>
+        <h4>UMass Memorial Medical Center </h4>
+        <li> Reducing Length of Stay via Patient Flow Predictions </li>
+      </ul>
+      
+      <ul>
+        <h4>Brigham And Women's Hospital  </h4>
+        <li> Detecting Victims of Domestic Violence with multi-modal data</li>
 
       </ul>
     </div>
