--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         <h4>Hartford HealthCare </h4>
         <li> Improving Hospital Operations with Patient Outcome Predictions </li>
         <li> Optimizing Elective Surgery Assignments </li>
-        <li> Identifying life-threatening events for early dispatch of Rapid Response Teams </li>
+        <li> Identifying Life-Threatening Events for Early Dispatch of Rapid Response Teams </li>
       </ul>
 
       <ul>
@@ -171,7 +171,7 @@
       
       <ul>
         <h4>Brigham And Women's Hospital  </h4>
-        <li> Detecting Victims of Domestic Violence with multi-modal data</li>
+        <li> Detecting Victims of Domestic Violence with Multi-Modal Data</li>
 
       </ul>
     </div>
