--- a/index.html
+++ b/index.html
@@ -201,8 +201,16 @@
 			</li> 
 
 			<li> Analytics Software Tools (MIT 15.003) 
-			  <br> Instructor - Fall 2021, Fall 2022, Fall 2023
+			  <br> Instructor - Fall 2023
 			</li> 
+
+      <li> Analytics Software Tools (MIT 15.003) 
+        <br> Instructor - Fall 2022
+      </li> 
+
+      <li> Analytics Software Tools (MIT 15.003) 
+        <br> Instructor - Fall 2021
+      </li> 
 
 			<li> The Analytics Edge (MIT 15.727) 
 			  <br> Teaching Assistant - Spring 2021
