add missing year

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 
   			<li> Pi Beta Kappa Honor Society</li>
 
-        <li> Young Talent Costa Rican Award </li>
+        <li> Young Talent Costa Rican Award, 2014 </li>
 
   			<li> Bronze Medal, 55th International Mathematical Olympiad (<a href="https://www.imo-official.org/">IMO</a>), 2014</li> 
 
