--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
 <!--Collaborations-->
 <section id="Collaborations" >
-  <div class="inner_wrapper Research Research-container">
+  <div class="inner_wrapper Collaborations Collaborations-container">
     <div class="container">
      <h2>Collaborations</h2>
       <ul>
