correct honor society

--- a/index.html
+++ b/index.html
@@ -236,9 +236,9 @@
 
   			<li> Winner, INFORMS’ William Pierskalla Best Paper Award 2020</li>
 
-  			<li> Tau Beta Pi Honor Society</li>
+  			<li> Tau Beta Pi Honor Society, 2018</li>
 
-  			<li> Pi Beta Kappa Honor Society</li>
+  			<li> Eta Kappa Nu Honor Society, 2014</li>
 
         <li> Young Talent Costa Rican Award, 2014 </li>
 
