--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
 
 	    <div id="main-nav" class="collapse navbar-collapse navStyle">
 			<ul class="nav navbar-nav" id="mainNav">
-			  <li class="active"><a href="AboutMe" class="scroll-link">About Me</a></li>
-			  <li><a href="Research" class="scroll-link">Research</a></li>
-        <li><a href="Collaborations" class="scroll-link">Collaborations</a></li> 
-			  <li><a href="Teaching" class="scroll-link">Teaching</a></li> 
-			  <li><a href="Awards" class="scroll-link">Awards</a></li> 
+			  <li class="active"><a href="#AboutMe" class="scroll-link">About Me</a></li>
+			  <li><a href="#Research" class="scroll-link">Research</a></li>
+        <li><a href="#Collaborations" class="scroll-link">Collaborations</a></li> 
+			  <li><a href="#Teaching" class="scroll-link">Teaching</a></li> 
+			  <li><a href="#Awards" class="scroll-link">Awards</a></li> 
 			</ul>
       </div>
 	  </nav>
