--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta name="google-site-verification" content="8dJcfI9ECeoEpNK_R9KdPfpiSnANlgPnUFS7JVZMt5c" />
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, maximum-scale=1">
-<title>Kimberly Villalobos Carballo</title>
+<title>Kimberly Villalobos Carballo MIT</title>
 <meta name="description" content="Kimberly Villalobos Carballo Personal Website">
 <meta name="author" content="Kimberly Villalobos Carballo">
 
@@ -53,11 +53,11 @@
 
 	    <div id="main-nav" class="collapse navbar-collapse navStyle">
 			<ul class="nav navbar-nav" id="mainNav">
-			  <li class="active"><a href="#AboutMe" class="scroll-link">About Me</a></li>
-			  <li><a href="#Research" class="scroll-link">Research</a></li>
-        <li><a href="#Collaborations" class="scroll-link">Collaborations</a></li> 
-			  <li><a href="#Teaching" class="scroll-link">Teaching</a></li> 
-			  <li><a href="#Awards" class="scroll-link">Awards</a></li> 
+			  <li class="active"><a href="https://kimvc7.github.io/KimberlyVillalobosCarballo/#AboutMe" class="scroll-link">About Me</a></li>
+			  <li><a href="https://kimvc7.github.io/KimberlyVillalobosCarballo/#Research" class="scroll-link">Research</a></li>
+        <li><a href="https://kimvc7.github.io/KimberlyVillalobosCarballo/#Collaborations" class="scroll-link">Collaborations</a></li> 
+			  <li><a href="https://kimvc7.github.io/KimberlyVillalobosCarballo/#Teaching" class="scroll-link">Teaching</a></li> 
+			  <li><a href="https://kimvc7.github.io/KimberlyVillalobosCarballo/#Awards" class="scroll-link">Awards</a></li> 
 			</ul>
       </div>
 	  </nav>
