Update photo name

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, maximum-scale=1">
 <title>Kimberly Villalobos Carballo MIT</title>
-<meta name="description" content="Kimberly Villalobos Carballo Personal Website">
+<meta name="description" content="Kimberly Villalobos Carballo MIT Operations Research Center Personal Website">
 <meta name="author" content="Kimberly Villalobos Carballo">
 
 
@@ -75,7 +75,7 @@
         <h3> Kimberly Villalobos Carballo</h3> 
         <h4> <b>Contact:</b> kimvc [at] mit.edu</h4> 
 
-        <div class="col-md-6"> <img class="img-responsive" src="kim.jpg"> </div>
+        <div class="col-md-6"> <img class="img-responsive" src="KimberlyVillalobosCarballo.jpg"> </div>
         
         <div class="col-sm-pull-11">
           <p align="justify"> I am a fourth-year PhD student at the Operations Research Center at MIT, under the guidance of Professor Dimitris Bertsimas. My research centers around leveraging Optimization and Deep Learning tools to enhance standard Machine Learning algorithms. I am particularly passionate about Healthcare applications, and a large part of my research has been inspired by collaborarions with hospitals that aim to improve the quality of their services and operations.</p> 
