--- a/index.html
+++ b/index.html
@@ -209,17 +209,22 @@
 			  <br> Instructor - Fall 2023
 			</li> 
 
-      <li> Analytics Software Tools (MIT 15.003) 
-        <br> Instructor - Fall 2022
-      </li> 
+      		<li> Analytics Software Tools (MIT 15.003) 
+        	  <br> Instructor - Fall 2022
+      		</li> 
 
-      <li> Analytics Software Tools (MIT 15.003) 
-        <br> Instructor - Fall 2021
-      </li> 
+	        <li> Analytics Software Tools (MIT 15.003) 
+	          <br> Instructor - Fall 2021
+	        </li> 
 
 			<li> The Analytics Edge (MIT 15.727) 
 			  <br> Teaching Assistant - Spring 2021
 			</li> 
+
+			<li> The Analytics Edge (MITx 15.071x) 
+			  <br> Online Teaching Assistant - Fall 2020
+			</li> 
+
 		  </ul>
     </div>
   </div>
