add missing years

--- a/index.html
+++ b/index.html
@@ -219,20 +219,20 @@
       <h2> <i>Honors & Awards</i> </h2> </div>
       <div class="col-md-5">
       <ul>
-        <li> Winner, INFORMS’ William Pierskalla Best Paper Award </li>
-          <li>Finalist, INFORMS Doing Good with Good OR Student Competition </li>
-          <li>Winner, MIT-Pillar AI Collective Prize </li>
-          <li>Winner, MIT Cognex Poster Competition </li>
-          <li>Tau Beta Pi Honor Society </li>
-          <li>Eta Kappa Nu Honor Society </li>
-          <li>Young Talent Costa Rican Award </li> </ul></div>
+        <li> Winner, INFORMS’ William Pierskalla Best Paper Award 2020 </li>
+          <li>Finalist, INFORMS Doing Good with Good OR Student Competition 2023 </li>
+          <li>Winner, MIT-Pillar AI Collective Prize 2023</li>
+          <li>Winner, MIT Cognex Poster Competition 2022</li>
+          <li>Tau Beta Pi Honor Society 2018</li>
+          <li>Eta Kappa Nu Honor Society 2018</li>
+          <li>Young Talent Costa Rican Award 2014</li> </ul></div>
           <div class="col-md-4">
             <ul>
-          <li>Bronze Medal, 55th International Mathematical Olympiad</li>
-          <li>Honorific Mention, 54th International Mathematical Olympiad</li>
-          <li>Bronze medal, Asian Pacific Mathematics Olympiad</li>
-          <li>Bronze medal, Iberoamerican Mathematical Olympiad</li>
-          <li>Bronze medal, Iberoamerican Mathematical Olympiad</li></ul></div>
+          <li>Bronze Medal, 55th International Mathematical Olympiad 2014</li>
+          <li>Honorable Mention, 54th International Mathematical Olympiad 2013</li>
+          <li>Bronze medal, Asian Pacific Mathematics Olympiad 2013</li>
+          <li>Bronze medal, Iberoamerican Mathematical Olympiad 2013</li>
+          <li>Bronze medal, Iberoamerican Mathematical Olympiad 2012</li></ul></div>
   </div></div>
 </div>
 </section>
