--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
      <div class="inner_wrapper Research Research-sub-container1">
       <div class="container">
       <div class="col-md-1">
-      <h4>Papers Published </h4> </div>
+      <h4> <i>Papers Published </i></h4> </div>
       <div class="col-md-10">
 		  <ul>
         <li>
@@ -136,7 +136,7 @@
         <div class="inner_wrapper Research Research-sub-container2">
           <div class="container">
           <div class="col-md-1">
-      <h4>Papers in Revision</h4> </div>
+      <h4><i>Papers in Revision</i></h4> </div>
       <div class="col-md-10">
         <ul>
           <li>
@@ -155,7 +155,7 @@
       <div class="inner_wrapper Research Research-sub-container1">
         <div class="container">
         <div class="col-md-1">
-      <h4>Papers Submitted</h4> </div>
+      <h4><i>Papers Submitted</i></h4> </div>
       <div class="col-md-10">
         <ul>
           <li>
