--- a/index.html
+++ b/index.html
@@ -243,10 +243,9 @@
 <section id="Teaching" class="content"> 
   <div class="inner_wrapper Teaching Teaching-container"> 
     <div class="container">
-      <div class="col-md-1">
-      <h2> <i>Teaching Experience</i> </h2> </div>
-      <div class="col-sm-1"> </div>
-      <div class="col-md-8">
+      <div class="col-md-1"></div>
+      <div class="col-md-9">
+      <h2> <i>Teaching Experience</i> </h2> 
 
       <button type="button" class="collapsible"> <h4>Machine Learning via a Modern Optimization Lens (MIT 15.095)</h4> 
         <p> Teaching Assistant - Fall 2022</p></button>
@@ -288,7 +287,7 @@
 <div class="content">
   <p> Online course on quantitative methods including data-mining, dynamic optimization, and simulation </p>
   <p> <b>Rating: </b> NA  </p>
-</div></div>
+</div></div></div></div>
 
 </section>
 
