--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
 <link href="css/font-awesome.css" rel="stylesheet" type="text/css"> 
 <link href="css/animate.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 
 
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-9VL7QS2E4Q"></script>
 <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -67,7 +69,6 @@
   </div>
 
 </header>
-
 
 <!--AboutMe-->
 <section id="AboutMe">
@@ -209,30 +210,29 @@
       </div>
 
   </div>
-</section>
-
+</section>           
 
 <section id="Awards"> 
 <div class="Awards Awards-container fadeInRight animated wow">
     <div class="container">
-      <div class="col-md-1">
+      <div class="col-md-1" style>
       <h2> <i>Honors & Awards</i> </h2> </div>
-      <div class="col-md-5">
+      <div class="col-md-5" style="margin-bottom:0px">
       <ul>
-        <li> Winner, INFORMS’ William Pierskalla Best Paper Award 2020 </li>
-          <li>Finalist, INFORMS Doing Good with Good OR Student Competition 2023 </li>
-          <li>Winner, MIT-Pillar AI Collective Prize 2023</li>
-          <li>Winner, MIT Cognex Poster Competition 2022</li>
-          <li>Tau Beta Pi Honor Society 2018</li>
-          <li>Eta Kappa Nu Honor Society 2018</li>
-          <li>Young Talent Costa Rican Award 2014</li> </ul></div>
-          <div class="col-md-4">
+        <li> <i class='fas fa-award'>   </i>    Winner, INFORMS’ William Pierskalla Best Paper Award 2020 </li>
+          <li> <i class='fas fa-award'>   </i> Finalist, INFORMS Doing Good with Good OR Student Competition 2023 </li>
+          <li> <i class='fas fa-award'>   </i> Winner, MIT-Pillar AI Collective Prize 2023</li>
+          <li> <i class='fas fa-award'>   </i> Winner, MIT Cognex Poster Competition 2022</li>
+          <li> <i class='fas fa-award'>   </i> Tau Beta Pi Honor Society 2018</li>
+          <li> <i class='fas fa-award'>   </i> Eta Kappa Nu Honor Society 2018</li>
+          <li> <i class='fas fa-award'>   </i> Young Talent Costa Rican Award 2014</li> </ul></div>
+          <div class="col-md-4" >
             <ul>
-          <li>Bronze Medal, 55th International Mathematical Olympiad 2014</li>
-          <li>Honorable Mention, 54th International Mathematical Olympiad 2013</li>
-          <li>Bronze medal, Asian Pacific Mathematics Olympiad 2013</li>
-          <li>Bronze medal, Iberoamerican Mathematical Olympiad 2013</li>
-          <li>Bronze medal, Iberoamerican Mathematical Olympiad 2012</li></ul></div>
+          <li> <i class='fas fa-award'>   </i> Bronze Medal, 55th International Mathematical Olympiad 2014</li>
+          <li> <i class='fas fa-award'>   </i> Honorable Mention, 54th International Mathematical Olympiad 2013</li>
+          <li> <i class='fas fa-award'>   </i> Bronze medal, Asian Pacific Mathematics Olympiad 2013</li>
+          <li> <i class='fas fa-award'>   </i> Bronze medal, Iberoamerican Mathematical Olympiad 2013</li>
+          <li> <i class='fas fa-award'>   </i> Bronze medal, Iberoamerican Mathematical Olympiad 2012</li></ul></div>
   </div></div>
 </div>
 </section>
