--- a/index.html
+++ b/index.html
@@ -243,8 +243,8 @@
 <section id="Teaching" class="content"> 
   <div class="inner_wrapper Teaching Teaching-container"> 
     <div class="container">
-      <div class="col-md-1"></div>
-      <div class="col-md-9">
+      <div class="col-sm-1" style="width:0.2%"></div>
+      <div class="col-md-10" style="width:87%">
       <h2> <i>Teaching Experience</i> </h2> 
 
       <button type="button" class="collapsible"> <h4>Machine Learning via a Modern Optimization Lens (MIT 15.095)</h4> 
