--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         <li><a href="#Collaborations" class="scroll-link">Collaborations</a></li> 
 			  <li><a href="#Awards" class="scroll-link">Awards</a></li> 
         <li><a href="#Teaching" class="scroll-link">Teaching</a></li> 
+        <li><a href="index2.html#CV" class="scroll-link">CV</a></li> 
 			</ul>
       </div>
 	  </nav>
