fix teaching margins

--- a/index.html
+++ b/index.html
@@ -244,8 +244,8 @@
 <section id="Teaching" class="content"> 
   <div class="inner_wrapper Teaching Teaching-container"> 
     <div class="container">
-      <div class="col-sm-1" style="width:0.2%"></div>
-      <div class="col-md-10" style="width:87%">
+      <div class="col-sm-1" style="width:0.05%"></div>
+      <div class="col-md-10" style="width:93%">
       <h2> <i>Teaching Experience</i> </h2> 
 
       <button type="button" class="collapsible"> <h4>Machine Learning via a Modern Optimization Lens (MIT 15.095)</h4> 
@@ -258,7 +258,7 @@
 <button type="button" class="collapsible"> <h4>Robust Modeling, Optimization, and Computation (MIT 15.094) </h4> 
         <p> Teaching Assistant - Spring 2022</p></button>
 <div class="content">
-  <p> Graduate-level (PhD, MSc) course on theory, modeling, algorithms, and applications of robust optimization </p>
+  <p> Graduate-level (PhD, MSc, MBAn) course on theory, modeling, algorithms, and applications of robust optimization </p>
   <p> <b>Rating: </b> 6.7/7.0  </p>
 </div>
 
