--- a/index2.html
+++ b/index2.html
@@ -58,10 +58,6 @@
 	    <div id="main-nav" class="collapse navbar-collapse navStyle">
 			<ul class="nav navbar-nav" id="mainNav">
 			  <li><a href="index.html#AboutMe" class="scroll-link">About Me</a></li>
-			  <li><a href="index.html#Research" class="scroll-link">Research</a></li>
-        <li><a href="index.html#Collaborations" class="scroll-link">Collaborations</a></li> 
-			  <li><a href="index.html#Awards" class="scroll-link">Awards</a></li> 
-        <li><a href="index.html#Teaching" class="scroll-link">Teaching</a></li> 
         <li class="active"><a href="#CV">CV</a></li> 
 			</ul>
       </div>
@@ -74,7 +70,7 @@
 <section id="CV">
   <div class="CV CV-container fadeInLeft animated wow">
     <div class="container">
-<iframe src="KimberlyVillalobosCarballoCV.pdf" width="90%" height="100%"></iframe> </div></div>
+<iframe src="KimberlyVillalobosCarballoCV.pdf#zoom=fitH" width="80%" height="100%"></iframe> </div></div>
 </section>
 
 
