--- a/index2.html
+++ b/index2.html
@@ -70,7 +70,7 @@
 <section id="CV">
   <div class="CV CV-container fadeInLeft animated wow">
     <div class="container">
-<iframe src="KimberlyVillalobosCarballoCV.pdf#view=fitH&toolbar=1#" width="80%" height="100%"></iframe> </div></div>
+<iframe src="KimberlyVillalobosCarballoCV.pdf#zoom=70&toolbar=1&view=Fit" width="80%" height="100%"></iframe> </div></div>
 </section>
 
 
