--- a/index2.html
+++ b/index2.html
@@ -70,7 +70,8 @@
 <section id="CV">
   <div class="CV CV-container fadeInLeft animated wow">
     <div class="container">
-<iframe id="Frame" src="KimberlyVillalobosCarballoCV.pdf#zoom=70&toolbar=1&view=Fit" width="80%" height="100%"></iframe> </div></div>
+<iframe id="Frame" type="application/pdf"
+              scrolling="auto" src="KimberlyVillalobosCarballoCV.pdf#zoom=70&toolbar=1&view=Fit" width="80%" height="100%"></iframe> </div></div>
 </section>
 
 <script>
