--- a/index2.html
+++ b/index2.html
@@ -71,14 +71,10 @@
   <div class="CV CV-container fadeInLeft animated wow">
     <div class="container">
 <iframe id="Frame" type="application/pdf"
-              scrolling="auto" src="KimberlyVillalobosCarballoCV.pdf#zoom=70&toolbar=1&view=Fit" width="80%" height="100%"></iframe> </div></div>
+              scrolling="auto" src="https://docs.google.com/viewerng/viewer?url=https://kimvc7.github.io/KimberlyVillalobosCarballoCV.pdf&embedded=true" width="80%" height="100%"></iframe> </div></div>
 </section>
 
-<script>
-document.getElementById("Frame").contentWindow.onload = function() {
-    this.document.getElementsByTagName("img")[0].style.width="100%";
-};
-</script>
+
 
 
 <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
