--- a/index2.html
+++ b/index2.html
@@ -71,7 +71,7 @@
   <div class="CV CV-container fadeInLeft animated wow">
     <div class="container">
 <iframe id="Frame" type="application/pdf"
-              scrolling="auto" src="https://docs.google.com/viewerng/viewer?url=https://kimvc7.github.io/KimberlyVillalobosCarballoCV.pdf&embedded=true" width="80%" height="100%"></iframe> </div></div>
+              scrolling="auto" src="https://docs.google.com/viewerng/viewer?url=https://kimvc7.github.io/KimberlyVillalobosCarballoCV.pdf&embedded=true" height="600"></iframe> </div></div>
 </section>
 
 
