--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         <ul >
         <li>  Improving Hospital Operations with Patient Outcome Predictions. </li>
         <li> Optimizing Elective Surgery Assignments. </li>
-        <li> Identifying Life-Threatening Events for Early Dispatch of Rapid Response Teams. </li>
+        <li> Identifying Severe Events for Early Dispatch of Rapid Response Teams. </li>
       </ul>
     </div>
         <div class="col-sm-4"> <img class="img-responsive" src="umass.png"> 
@@ -200,7 +200,7 @@
         <li> Reducing Length of Stay via Patient Flow Predictions. </li>
       </ul>
     </div>
-        <div class="col-sm-4"> <img class="img-responsive" src="brigham.png"> 
+        <div class="col-sm-4"> <img class="img-responsive2" src="brigham.png"> 
          <ul>
         <li> Detecting Victims of Domestic Violence with Multi-Modal Data.
         </li>
@@ -244,8 +244,8 @@
     <div class="container">
       <div class="col-sm-1" style="width:0.05%"></div>
       <div class="col-md-10" style="width:93%">
-      <h2> <i>Teaching Experience</i> </h2> 
-
+      <h2 > <i>Teaching Experience</i> </h2> 
+      <div style="height:20px"></div>
       <button type="button" class="collapsible"> <h4>Machine Learning via a Modern Optimization Lens (MIT 15.095)</h4> 
         <p> Teaching Assistant - Fall 2022</p></button>
 <div class="content">
