--- a/index.html
+++ b/index.html
@@ -59,7 +59,11 @@
 	    <div id="main-nav" class="collapse navbar-collapse navStyle">
 			<ul class="nav navbar-nav" id="mainNav">
 			  <li class="active"><a href="#AboutMe" class="scroll-link">About Me</a></li>
-        <li><a href="index2.html#CV" class="scroll-link">CV</a></li> 
+        <li><a href="#Research" class="scroll-link">Research</a></li>
+        <li><a href="#Collaborations" class="scroll-link">Collaborations</a></li> 
+        <li><a href="#Awards" class="scroll-link">Awards</a></li> 
+        <li><a href="#Teaching" class="scroll-link">Teaching</a></li> 
+        <li><a href="KimberlyVillalobosCarballoCV.pdf" class="scroll-link">CV</a></li> 
 			</ul>
       </div>
 	  </nav>
@@ -242,8 +246,7 @@
 <section id="Teaching" class="content"> 
   <div class="inner_wrapper Teaching Teaching-container"> 
     <div class="container">
-      <div class="col-sm-1" style="width:0.05%"></div>
-      <div class="col-md-10" style="width:93%">
+      <div class="col-md-pull-10" style="margin-left:1em">
       <h2 > <i>Teaching Experience</i> </h2> 
       <div style="height:20px"></div>
       <button type="button" class="collapsible"> <h4>Machine Learning via a Modern Optimization Lens (MIT 15.095)</h4> 
