--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 		        </div>
 		        
 		        <div class="col-sm-pull-11">
-		         	<p align="justify" class='large_margin'> Hello! I am a fourth-year PhD student at the Operations Research Center at MIT, under the guidance of Professor Dimitris Bertsimas. My research integrates Optimization and Machine Learning tools to enhance the performance of conventional algorithms in these domains. I am particularly passionate about Healthcare applications, and a large part of my research has been inspired by collaborarions with hospitals that aim to improve the quality of their services and operations.</p> 
+		         	<p align="justify" class='large_margin'> Hello! I am a fourth-year PhD student at the Operations Research Center at MIT, under the guidance of Professor Dimitris Bertsimas. My research integrates Optimization and Machine Learning tools to enhance the performance of conventional algorithms in these domains. I am particularly passionate about Healthcare applications, and a large part of my research has been inspired by collaborations with hospitals that aim to improve the quality of their services and operations.</p> 
 		         	<p align="justify" class='small_margin'> <b>Interests: </b> Optimization (Robust, Stochastic, Convex and Non-convex,  Discrete and Continuous, Multistage), Machine Learning, Data Multimodality, Healthcare Analytics, Applications in Medicine. </p> 
 
 		         	<p class='interests'> <b> MIT Education: </b>
