--- a/index.html
+++ b/index.html
@@ -260,6 +260,14 @@
     	<div class="container">
       		<div class="col-md-pull-10" style="margin-left:1em">
       			<h2> <i>Teaching Experience</i> </h2> 
+
+      			<div class="vid" style="text-align: center;">
+      				<video style="padding:10px;border:1px solid black;background-color: black" width="100%" controls poster=thumbnail.png>
+      					<source src="mban_speech.mp4" style="margin:10em"></source>
+      				</video>
+      				<h3> I was honored to be chosen as the guest speaker for the graduation of my students in the 2023 MIT MBAn class. Here is my speech on the power of failure and hardship.</h3>
+      			</div>
+      			
       			<div style="height:20px"></div>
 
       			<button type="button" class="collapsible"> <h4>Machine Learning via a Modern Optimization Lens (MIT 15.095)</h4> 
