--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
   		</div>
 
   		<div class="container">
-			<p style='text-align: center;font-size: 16px'> I also had the great honor to be selected as the guest speaker for the graduation of my students in the 2023 MIT MBAn class. You can watch my speech on the power of failure and hardship <a href="https://www.dropbox.com/scl/fi/60rli49y0wg0xjoiysh99/mban_speech.mp4?rlkey=zoqi10ivenl7vg5nj132v7862&dl=0">here</a>.</p>
+			<p style='text-align: center;font-size: 16px'> I also had the great honor of being selected by my students as the guest speaker for the 2023 MIT MBAn class. You can watch my speech on the power of failure and hardship <a href="https://www.dropbox.com/scl/fi/60rli49y0wg0xjoiysh99/mban_speech.mp4?rlkey=zoqi10ivenl7vg5nj132v7862&dl=0">here</a>.</p>
   		</div>
   	</div>
 </section>
